force-app/main/default/objects/Surgeon_Focus_List__c/Surgeon_Focus_List__c.object-meta.xml
<CustomObject>
    <label>Surgeon  List</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Surgeon Focus List  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgeons Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>