force-app/main/default/objects/Surgeon_Focus_List__c/fields/Assigned_Team_Formula__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team_Formula__c</fullName>
    <formula>Assigned_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Team(s)</label>
    <type>Text</type>
</CustomField>