force-app/main/default/objects/Surgeon_Focus_List__c/fields/Assigned_To_me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_me__c</fullName>
    <formula>IF( $User.Id =  Assigned_Sales_Rep__r.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To me</label>
    <type>Checkbox</type>
</CustomField>