force-app/main/default/objects/Surgeon_Focus_List__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_Ortho_Competitors</valueSetName>
    </valueSet>
</CustomField>