force-app/main/default/objects/Surgeon_Focus_List__c/fields/Date_Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Contacted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last time the rep was contacted</inlineHelpText>
    <label>Date Last Touched</label>
    <type>Date</type>
</CustomField>