force-app/main/default/objects/Surgeon_Focus_List__c/fields/Extremity_Fellowship_Program_Attended__c.field-meta.xml
<CustomField>
    <fullName>Extremity_Fellowship_Program_Attended__c</fullName>
    <label>Extremity Fellowship Program Attended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beaumont Health, Department of Orthopaedic Surgery -  Royal Oak, MI</fullName>
            </value>
            <value>
                <fullName>Cincinnati Shoulder and Elbow Fellowship</fullName>
            </value>
            <value>
                <fullName>Cleveland Clinic Foundation -  Cleveland, Ohio</fullName>
            </value>
            <value>
                <fullName>Columbia University New York Presbyterian Hospital – Shoulder and Elbow Fellowship -  New York, NY</fullName>
            </value>
            <value>
                <fullName>Florida Orthopaedic Institute -  Tampa, FL</fullName>
            </value>
            <value>
                <fullName>Holy Cross Orthopedic Institute -  Fort lauderdale, FL</fullName>
            </value>
            <value>
                <fullName>Hospital for Special Surgery Shoulder Fellowship -  New York, NY</fullName>
            </value>
            <value>
                <fullName>Kerlan Jobe Adult Shoulder and Elbow Reconstructive Fellowship -  los angeles, CA</fullName>
            </value>
            <value>
                <fullName>Massachusetts General Hospital &amp; New England Baptist Hospital -  boston, MA</fullName>
            </value>
            <value>
                <fullName>Mayo Clinic, Department of Orthopedic Surgery -  rochester, mn</fullName>
            </value>
            <value>
                <fullName>MedStar Union Hospital Shoulder and Elbow Fellowship -  baltimore, md</fullName>
            </value>
            <value>
                <fullName>Montefiore Medical Center -  bronx, ny</fullName>
            </value>
            <value>
                <fullName>Mount Sinai Shoulder and Elbow Fellowship -  New York, NY</fullName>
            </value>
            <value>
                <fullName>NYU Langone Orthopedic Hospital -  New York, NY</fullName>
            </value>
            <value>
                <fullName>Oregon Shoulder Fellowship -  Medford, OR</fullName>
            </value>
            <value>
                <fullName>Rhode Island Shoulder &amp; Elbow Service – Brown Shoulder and Elbow Fellowship, Warren Alpert Medical School, Brown University -  Providence, RI</fullName>
            </value>
            <value>
                <fullName>Rush University Medical Center, Midwest Orthopaedics -  Chicago, IL</fullName>
            </value>
            <value>
                <fullName>San Francisco Shoulder and Elbow Fellowship -  San Francisco, CA</fullName>
            </value>
            <value>
                <fullName>TERFSES (Texas Education and Research Foundation for Shoulder and Elbow Surgery) -  Houston, TX</fullName>
            </value>
            <value>
                <fullName>The Johns Hopkins University, Division of Shoulder and Elbow Surgery -  Columbia, MD</fullName>
            </value>
            <value>
                <fullName>Thomas Jefferson University Hospital -  Philadelphia, PA</fullName>
            </value>
            <value>
                <fullName>University of Florida -  Gainsville, FL</fullName>
            </value>
            <value>
                <fullName>University of Pennsylvania -  Philadelphia, PA</fullName>
            </value>
            <value>
                <fullName>University of Utah -  Salt Lake City, UT</fullName>
            </value>
            <value>
                <fullName>University of Washington Medical Center, Department of Orthopaedics and Sports Medicine -  Seattle, WA</fullName>
            </value>
            <value>
                <fullName>UPMC -Department of Orthopaedic Surgery, Shoulder and Elbow Fellowship -  Pittsburgh, PA</fullName>
            </value>
            <value>
                <fullName>UT Health San Antonio Rockwood Shoulder &amp; Elbow Fellowship -  San Antonio, TX</fullName>
            </value>
            <value>
                <fullName>W.B. Carrell Memorial Clinic -  Dallas, TX</fullName>
            </value>
            <value>
                <fullName>Washington University School of Medicine, Department of Orthopaedic Surgery -  St Louis, MO</fullName>
            </value>
            <value>
                <fullName>Western Orthopaedics Research and Education Foundation Shoulder and Elbow Fellowship -  Denver, CO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>