force-app/main/default/objects/Surgeon_Focus_List__c/fields/Extremity_Market_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Extremity_Market_Segmentation__c</fullName>
    <label>Extremity Market Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Segmentation</valueSetName>
    </valueSet>
</CustomField>