force-app/main/default/objects/Surgeon_Focus_List__c/fields/Focus_Product__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product__c</fullName>
    <label>Focus Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>Anatomic Primary - Comprehensive Anatomic</fullName>
            </value>
            <value>
                <fullName>Anatomic Primary - Other</fullName>
            </value>
            <value>
                <fullName>Anatomic Primary - Sidus Stemless Shoulder</fullName>
            </value>
            <value>
                <fullName>Elbow - Coonrad Morrey</fullName>
            </value>
            <value>
                <fullName>Elbow - Nexel</fullName>
            </value>
            <value>
                <fullName>Elbow - Other</fullName>
            </value>
            <value>
                <fullName>Elbow - Radial Head - Explor</fullName>
            </value>
            <value>
                <fullName>Elbow - Radial Head - L2L</fullName>
            </value>
            <value>
                <fullName>Fracture - Comprehensive Fracture</fullName>
            </value>
            <value>
                <fullName>Fracture - Other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PSI - Other</fullName>
            </value>
            <value>
                <fullName>PSI - Signature</fullName>
            </value>
            <value>
                <fullName>Revision - Comprehensive Revision</fullName>
            </value>
            <value>
                <fullName>Revision - Other</fullName>
            </value>
            <value>
                <fullName>Reverse - TM Reverse</fullName>
            </value>
            <value>
                <fullName>Revision - Comprehensive SRS</fullName>
            </value>
            <value>
                <fullName>Revision - Comprehensive VRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>