force-app/main/default/objects/Surgeon_Focus_List__c/fields/Last_Modified_By_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Surgeons_Focus_List1</relationshipName>
    <type>Lookup</type>
</CustomField>