force-app/main/default/objects/Surgeon_Focus_List__c/fields/Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>Lead_Grade__c</fullName>
    <label>Lead Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <label>A - Hot</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <label>B - Warm</label>
            </value>
            <value>
                <fullName>Cold</fullName>
                <label>C - Cold</label>
            </value>
            <value>
                <fullName>D - At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>