force-app/main/default/objects/Surgeon_Focus_List__c/fields/Market_Segmentation_URL__c.field-meta.xml
<CustomField>
    <fullName>Market_Segmentation_URL__c</fullName>
    <formula>&quot;https://zimmerbiometglobal.lightning.force.com/lightning/r/Market_Segmentation__c/&quot;&amp;Surgeon__r.Id&amp;&quot;/related/Market_Segmentations__r/view&quot;</formula>
    <label>Market Segmentation URL</label>
    <type>Text</type>
</CustomField>