force-app/main/default/objects/Surgeon_Focus_List__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Step</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>