force-app/main/default/objects/Surgeon_Focus_List__c/fields/Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Step Due Date</label>
    <type>Date</type>
</CustomField>