force-app/main/default/objects/Surgeon_Focus_List__c/fields/Next_Step_Link__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Link__c</fullName>
    <description>This will house the salsforce record link associate w/ next step column</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will house the salsforce record link associate w/ next step column</inlineHelpText>
    <label>Next Step Link</label>
    <type>Url</type>
</CustomField>