force-app/main/default/objects/Surgeon_Focus_List__c/fields/Ortho_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Ortho_Specialty__c</fullName>
    <label>Ortho Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Surgeon_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>US_Ortho_Segment</valueSetName>
    </valueSet>
</CustomField>