force-app/main/default/objects/Surgeon_Focus_List__c/fields/Percent_of__c.field-meta.xml
<CustomField>
    <fullName>Percent_of__c</fullName>
    <inlineHelpText>What percent of the surgeons procedures full under &apos;reverse&apos; as it pertains to extremities</inlineHelpText>
    <label>Percent of Reverse Procedures</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>