force-app/main/default/objects/Surgeon_Focus_List__c/fields/Percent_of_Anatomic_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Anatomic_Procedures__c</fullName>
    <label>Percent of Anatomic Procedures</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>