force-app/main/default/objects/Surgeon_Focus_List__c/fields/Planning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Planning_Competitor__c</fullName>
    <label>Planning Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arthrex VIP</fullName>
            </value>
            <value>
                <fullName>Blue Print</fullName>
            </value>
            <value>
                <fullName>DePuy Trumatch</fullName>
            </value>
            <value>
                <fullName>DJO Match Point</fullName>
            </value>
            <value>
                <fullName>Exactech GPS</fullName>
            </value>
            <value>
                <fullName>S&amp;N Promos</fullName>
            </value>
            <value>
                <fullName>Stryker TrueSight</fullName>
            </value>
            <value>
                <fullName>ZB Signature One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>