force-app/main/default/objects/Surgeon_Focus_List__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Target Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_Ortho_Segment</valueSetName>
    </valueSet>
</CustomField>