force-app/main/default/objects/Surgeon_Focus_List__c/fields/Stemless_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Stemless_Competitor__c</fullName>
    <label>Stemless Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arthrex Eclipse</fullName>
            </value>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>DePuy Global Icon</fullName>
            </value>
            <value>
                <fullName>DJO AltiVate</fullName>
            </value>
            <value>
                <fullName>Exactech Equinox</fullName>
            </value>
            <value>
                <fullName>Tornier Simpliciti</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Nano</fullName>
            </value>
            <value>
                <fullName>Zimmer Biomet Sidus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>