force-app/main/default/objects/Surgeon_Focus_List__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <inlineHelpText>The surgeon related to this focus list record</inlineHelpText>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgeons Lists</relationshipLabel>
    <relationshipName>Surgeons_Focus_List</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>