force-app/main/default/objects/Surgeon_Focus_List__c/fields/Surgeon_Status__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Status__c</fullName>
    <description>Field to capture the status of the surgeon (ex: Active, Retired, etc.)</description>
    <label>Surgeon Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Moved Territory</fullName>
            </value>
            <value>
                <fullName>Temporary Leave</fullName>
            </value>
            <value>
                <fullName>Military Leave</fullName>
            </value>
            <value>
                <fullName>Approaching Retirement</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>