force-app/main/default/objects/Surgeon_Focus_List__c/fields/Surgeon_Type__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Type__c</fullName>
    <description>Field to capture what &apos;type&apos; of surgeon the record is; useful to filter list views for only Ortho surgeons, etc.</description>
    <label>Surgeon Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ortho Surgeon</fullName>
                <default>true</default>
                <label>Ortho Surgeon</label>
            </value>
            <value>
                <fullName>Spine Surgeon</fullName>
            </value>
            <value>
                <fullName>CMF Surgeon</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>DPM</fullName>
            </value>
            <value>
                <fullName>Other Non-Ortho Surgeon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>