force-app/main/default/objects/Surgeon_Focus_List__c/fields/Team_s__c.field-meta.xml
<CustomField>
    <fullName>Team_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>