force-app/main/default/objects/Surgeon_Focus_List__c/fields/Team_s_for_Filtering__c.field-meta.xml
<CustomField>
    <fullName>Team_s_for_Filtering__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team(s) for Filtering</label>
    <type>TextArea</type>
</CustomField>