force-app/main/default/objects/Surgeon_Focus_List__c/fields/TSA_Competitor__c.field-meta.xml
<CustomField>
    <fullName>TSA_Competitor__c</fullName>
    <label>TSA Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arthrex</fullName>
            </value>
            <value>
                <fullName>Arthrosurface</fullName>
            </value>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>DePuy</fullName>
            </value>
            <value>
                <fullName>DJO</fullName>
            </value>
            <value>
                <fullName>Exactech</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Medacta</fullName>
            </value>
            <value>
                <fullName>S&amp;N/Integra</fullName>
            </value>
            <value>
                <fullName>Stryker/Wright Medical/Tornier</fullName>
            </value>
            <value>
                <fullName>FH Ortho</fullName>
            </value>
            <value>
                <fullName>FX Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>